Working stub methods

--- a/UE4HaxeExternGenerator.uplugin
+++ b/UE4HaxeExternGenerator.uplugin
@@ -14,7 +14,7 @@
 	"Modules" :
 	[
 		{
-			"Name" : "HaxeExternGenerator",
+			"Name" : "UE4HaxeExternGenerator",
 			"Type" : "Program",
 			"LoadingPhase" : "PostConfigInit"
 		}
