Add support for non-engine modules
 * Non-engine modules will not be under "unreal" folder, and when
compiling them, only the selected game modules will be compiled
 * Rename project
 * Update documentation

--- a/UnrealHxGenerator.uplugin
+++ b/UnrealHxGenerator.uplugin
@@ -1,6 +1,6 @@
 {
 	"FileVersion" : 3,
-	"FriendlyName" : "UE4Haxe Extern Generator plugin",
+	"FriendlyName" : "Unreal.hx Extern Generator plugin",
 	"Version" : 1,
 	"VersionName": "alpha",
 	"FriendlyVersion" : "1.0",
@@ -14,7 +14,7 @@
 	"Modules" :
 	[
 		{
-			"Name" : "UE4HaxeExternGenerator",
+			"Name" : "UnrealHxGenerator",
 			"Type" : "Program",
 			"LoadingPhase" : "PostConfigInit"
 		}
